feat(routes): implement repository and service layers for routes, schedules, and trajectories; refactor controllers and mappers